lib_LTLIBRARIES = libmodule-dummy.la libmodule-external-simple.la

#libwspy_la_LDFLAGS = -lxml2

libmodule_dummy_la_SOURCES = ModuleDummy.cc
libmodule_dummy_la_CXXFLAGS = -I.. -I../../lib

libmodule_external_simple_la_SOURCES = ModuleExternalSimple.cc
libmodule_external_simple_la_CXXFLAGS = -I.. -I../../lib

