lib_LTLIBRARIES = libmodule-dummy.la libmodule-load-resource.la #libmodule-external-simple.la

AM_LDFLAGS = -Wall -module
AM_CXXFLAGS = -I.. -I../../lib -Wall

libmodule_dummy_la_SOURCES = ModuleDummy.cc
#libmodule_dummy_la_CXXFLAGS = -I.. -I../../lib

libmodule_load_resource_la_SOURCES = ModuleLoadResource.cc
#libmodule_load_resource_la_CXXFLAGS = -I.. -I../../lib

#libmodule_external_simple_la_SOURCES = ModuleExternalSimple.cc
#libmodule_external_simple_la_CXXFLAGS = -I.. -I../../lib

