lib_LTLIBRARIES = libmodule-dummy.la \
	libmodule-load-resource.la \
	libmodule-save-resource.la \
	libmodule-external-simple.la


AM_LDFLAGS = -Wall -module
AM_CXXFLAGS = -I.. -I../../lib -Wall

libmodule_dummy_la_SOURCES = ModuleDummy.h ModuleDummy.cc

libmodule_load_resource_la_SOURCES = ModuleLoadResource.h ModuleLoadResource.cc

libmodule_save_resource_la_SOURCES = ModuleSaveResource.h ModuleSaveResource.cc

libmodule_external_simple_la_SOURCES = ModuleExternalSimple.h ModuleExternalSimple.cc

