if WITH_SWIG
if WITH_PYTHON

pythondir = $(libdir)/hector/modules/python
python_SCRIPTS = TestInput.py TestOutput.py TestSimple.py #TestMulti.py Dump.py

EXTRA_DIST = ${python_SCRIPTS}

# Delme
#bin_PROGRAMS = test
#test_CXXFLAGS = $(AM_CXXFLAGS) $(PYTHON_CFLAGS) @LOG4CXX_CFLAGS@ -I$(top_srcdir)/lib -I$(top_srcdir)/lib/processing_engine -I$(top_srcdir)/lib/processing_engine/resources
#test_LDFLAGS = $(PYTHON_LDFLAGS)
#test_SOURCES = EmbeddedPython.h EmbeddedPython.cc
# /Delme

endif
endif
